<resources>
    <string name="app_name">MjAppXml</string>
    <string name="home">홈</string>
    <string name="game">게임</string>
    <string name="calendar">달력</string>
    <string name="account_book">가계부</string>
    <string name="add_account_book">가계부 등록</string>
    <string name="other">기타</string>
    <string name="content_description_pokemon_image">pokemon image</string>
    <string name="content_description_image">image</string>
    <string name="week">약점</string>
    <string name="pokemon">포켓몬</string>
    <string name="hp">HP</string>
    <string name="attack">공격</string>
    <string name="defence">방어</string>
    <string name="special_attack">특공</string>
    <string name="special_defence">특방</string>
    <string name="speed">스피드</string>
    <string name="pokemon_name">포켓몬 이름</string>
    <string name="search">검색하기</string>
    <string name="increase_setting">증가폭 설정</string>
    <string name="input_increase">증가폭 입력</string>
    <string name="do_setting">설정하기</string>
    <string name="reload">다시 조회</string>
    <string name="elsword_character">엘소드 캐릭터</string>
    <string name="quest_count">퀘스트 개수</string>
    <string name="add">추가</string>
    <string name="quest_name">퀘스트 명</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="do_progress">진행 중</string>
    <string name="status_update">상태 업데이트</string>
    <string name="not_progress">진행 안함</string>
    <string name="proceeding">진행 중</string>
    <string name="complete">완료</string>
    <string name="empty_schedule">등록 된 일정이 없습니다.</string>
    <string name="schedule">일정</string>
    <string name="plan">계획</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="schedule_title">일정 제목</string>
    <string name="schedule_contents">일정 내용</string>
    <string name="register">등록하기</string>
    <string name="hint_plan_title">계획 제목</string>
    <string name="hint_task">계획 내용</string>
    <string name="setting_recurrence_type">반복 설정</string>
    <string name="none_recurrence">반복 안함</string>
    <string name="daily">매일</string>
    <string name="weekly">매주</string>
    <string name="monthly">매월</string>
    <string name="yearly">매년</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="this_month_summary">이번 달 요약</string>
    <string name="income">수입</string>
    <string name="expenditure">지출</string>
    <string name="difference">차액</string>
    <string name="base_date">기준일</string>
    <string name="day_25">25일</string>
    <string name="add_pinned_history">고정 내역 추가</string>
    <string name="add_new_history">신규 내역 추가</string>
    <string name="last_month_summary">지난 달 분석</string>
    <string name="year_summary">1년 요약</string>
    <string name="history">내역</string>
    <string name="select_date">날짜 선택</string>
    <string name="income_expenditure_amount">수입/지출 금액</string>
    <string name="find_favorite">즐겨찾기에서 찾기</string>
    <string name="won">원</string>
    <string name="where_to_use">사용 내용</string>
    <string name="select_where_to_use">사용처 선택</string>
    <string name="add_favorite">즐겨찾기 등록</string>
    <string name="fixed_account_book_register">고정 내역 등록</string>
    <string name="generation_dex_title">타이틀 도감</string>
    <string name="schedule_select_date">일정 날짜 선택</string>
</resources>