<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="dialog"
            type="com.example.mjappxml.ui.dialog.SelectRecurrenceTypeDialog" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.mjappxml.custom.IconButton
                android:id="@+id/btnClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:onClick="@{() -> dialog.dismiss()}"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_recurrence_type"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btnClose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnClose" />

            <com.example.mjappxml.custom.RadioGridGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:columnCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnClose">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioNone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:tag="none"
                    android:text="@string/none_recurrence"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/purple" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioDaily"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:tag="daily"
                    android:text="@string/daily"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/purple" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioWeekly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:tag="weekly"
                    android:text="@string/weekly"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/purple" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioMonthly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:tag="monthly"
                    android:text="@string/monthly"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/purple" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioYearly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:tag="yearly"
                    android:text="@string/yearly"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/purple" />

            </com.example.mjappxml.custom.RadioGridGroup>

            <com.example.mjappxml.custom.DoubleCardView
                android:id="@+id/cardCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:onClick="@{() -> dialog.dismiss()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cardOk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </com.example.mjappxml.custom.DoubleCardView>

            <com.example.mjappxml.custom.DoubleCardView
                android:id="@+id/cardOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:onClick="@{() -> dialog.onSelect()}"
                app:layout_constraintBottom_toBottomOf="@id/cardCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardCancel"
                app:layout_constraintTop_toTopOf="@id/cardCancel"
                app:topCardColor="@color/purple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/ok"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </com.example.mjappxml.custom.DoubleCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>