<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="fragment"
            type="com.example.mjappxml.ui.accountbook.add.fixed.AddFixedAccountBookFragment" />

        <variable
            name="vm"
            type="com.example.mjappxml.ui.accountbook.add.fixed.AddFixedAccountBookViewModel" />

        <variable
            name="adapter"
            type="com.example.mjappxml.ui.accountbook.add.WhereToUseAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingTop="22dp"
        android:paddingEnd="17dp"
        android:paddingBottom="10dp">

        <com.example.mjappxml.custom.IconButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="@{() -> fragment.onBack()}"
            app:cardBackgroundColor="@{vm.isIncome() ? @color/turquoise : @color/red, default = @color/turquoise}"
            app:cardCornerRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:res="@drawable/ic_back" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:onClick="@{() -> fragment.updateIncome()}"
            app:cardBackgroundColor="@{vm.isIncome() ? @color/turquoise : @color/white, default = @color/turquoise}"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@id/btnExpenditure"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/income"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnExpenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.updateExpenditure()}"
            app:cardBackgroundColor="@{vm.isIncome() ? @color/white : @color/red, default = @color/white}"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/expenditure"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.mjappxml.custom.DoubleCardView
                    android:id="@+id/cardDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> fragment.showDateSelectDialog()}"
                    app:bottomCardColor="@{vm.isIncome() ? @color/turquoise : @color/red, default = @color/turquoise}">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="13dp"
                        android:hint="@string/select_date"
                        android:text="@{vm.item.dateText}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="2023.05.19" />

                </com.example.mjappxml.custom.DoubleCardView>

                <com.example.mjappxml.custom.DoubleCardView
                    android:id="@+id/cardAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:bottomCardColor="@{vm.isIncome() ? @color/turquoise : @color/red, default = @color/turquoise}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="13dp"
                        android:orientation="horizontal">

                        <com.example.mjappxml.custom.CustomEditTextView
                            android:id="@+id/editAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:hint="@string/income_expenditure_amount"
                            android:inputType="number"
                            android:maxLength="8"
                            android:maxLines="1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:amountText="@{String.valueOf(vm.item.amount)}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/won"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </com.example.mjappxml.custom.DoubleCardView>

                <com.example.mjappxml.custom.DoubleCardView
                    android:id="@+id/cardWhereToUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:bottomCardColor="@{vm.isIncome() ? @color/turquoise : @color/red, default = @color/turquoise}">

                    <com.example.mjappxml.custom.CustomEditTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="13dp"
                        android:hint="@string/where_to_use"
                        android:maxLines="1"
                        android:text="@={vm.item.whereToUse}"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </com.example.mjappxml.custom.DoubleCardView>

                <com.example.mjappxml.custom.DoubleCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:bottomCardColor="@{vm.isIncome() ? @color/turquoise : @color/red, default = @color/turquoise}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="18dp"
                        android:paddingBottom="13dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_where_to_use"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:overScrollMode="never"
                            app:adapter="@{adapter}"
                            app:submitList="@{vm.whereToUseList}"
                            tools:itemCount="3"
                            tools:listitem="@layout/cell_where_to_use" />

                    </LinearLayout>

                </com.example.mjappxml.custom.DoubleCardView>

            </LinearLayout>

        </ScrollView>

        <com.example.mjappxml.custom.DoubleCardView
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.doRegister()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:topCardRes="@{vm.isIncome() ? @color/turquoise : @color/red}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="13dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.example.mjappxml.custom.DoubleCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>