<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="dialog"
            type="com.example.mjappxml.ui.game.pokemon.counter.IncreaseSettingDialog" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/increase_setting"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.mjappxml.custom.IconButton
                android:id="@+id/btnClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:onClick="@{() -> dialog.onDismissClick()}"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <com.example.mjappxml.custom.DoubleCardView
                android:id="@+id/layoutInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="17dp"
                app:bottomCardColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnClose">

                <com.example.mjappxml.custom.CustomEditTextView
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="13dp"
                    android:hint="@string/input_increase"
                    android:inputType="number"
                    android:text="@{String.valueOf(dialog.increase)}"
                    android:textColor="@color/black" />

            </com.example.mjappxml.custom.DoubleCardView>

            <com.example.mjappxml.custom.DoubleCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:onClick="@{() -> dialog.onSettingClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/layoutInput"
                app:layout_constraintStart_toStartOf="@id/layoutInput"
                app:layout_constraintTop_toBottomOf="@id/layoutInput"
                app:topCardColor="@color/red">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="13dp"
                    android:text="@string/do_setting"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.example.mjappxml.custom.DoubleCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>