<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.example.mjappxml.ui.game.elsword.counter.ElswordCounterAddViewModel" />

        <variable
            name="fragment"
            type="com.example.mjappxml.ui.game.elsword.counter.ElswordCounterAddFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.example.mjappxml.custom.IconButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:onClick="@{() -> fragment.onBack()}"
            app:cardBackgroundColor="@color/red"
            app:cardCornerRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:res="@drawable/ic_back" />

        <com.example.mjappxml.custom.DoubleCardView
            android:id="@+id/cardAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="17dp"
            app:bottomCardColor="@color/red"
            app:doubleCardRadius="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="18dp"
                android:paddingBottom="18dp">

                <com.example.mjappxml.custom.CustomEditTextView
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quest_name"
                    android:imeOptions="actionNext"
                    android:maxLength="100"
                    android:maxLines="1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black" />

                <com.example.mjappxml.custom.CustomEditTextView
                    android:id="@+id/editCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/quest_count"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> fragment.addCounter()}"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="5dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:text="@string/add"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.example.mjappxml.custom.DoubleCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="17dp"
            app:adapter="@{fragment.adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAdd"
            app:submitList="@{vm.list}"
            tools:listitem="@layout/cell_elswored_counter_progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>